<resources>
    <string name="app_name">Droid Caffe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_caffe">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="TODODESCRIPTION">TODO</string>
    <string name="Order">Order</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="Address">Address</string>
    <string name="enter_address_hint">Enter Your Address</string>
    <string name="phone_lbl">Phone</string>
    <string name="phone_text">Enter Your Phone</string>
    <string name="lblNote">Nota</string>
    <string name="txtNota">Enter Note</string>
    <string name="lblRadio" />
    <string name="lblRaddio">Choose a delivery method</string>
    <string name="contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_status">Status</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>

</resources>